# ChangeLog for www-apps/egroupware
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/egroupware/ChangeLog,v 1.66 2007/03/06 15:28:30 yoswink Exp $

  06 Mar 2007; Jose Luis Rivero <yoswink@gentoo.org>
  egroupware-1.2.106.ebuild:
  Stable on alpha wrt bug #143378

  12 Feb 2007; Simon Stelling <blubb@gentoo.org> egroupware-1.2.106.ebuild:
  stable on amd64; bug 143378

  24 Jan 2007; Jeroen Roovers <jer@gentoo.org> egroupware-1.2.106.ebuild:
  Stable for HPPA (bug #143378).

  12 Jan 2007; nixnut <nixnut@gentoo.org> egroupware-1.2.106.ebuild:
  Stable on ppc wrt bug 143378

  10 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  egroupware-1.2.106.ebuild:
  stable x86, bug #143378

  02 Jan 2007; Renat Lumpau <rl03@gentoo.org>
  egroupware-1.0.0.009_p3.ebuild, egroupware-1.2.104.ebuild,
  egroupware-1.2.105.ebuild:
  Remove mysql dep wrt bug #159781.

*egroupware-1.2.106 (02 Jan 2007)

  02 Jan 2007; Renat Lumpau <rl03@gentoo.org> +egroupware-1.2.106.ebuild:
  Version bump

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org>
  egroupware-1.0.0.009_p3.ebuild, egroupware-1.2.104.ebuild,
  egroupware-1.2.105.ebuild:
  dev-db/mysql => virtual/mysql

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org>
  egroupware-1.0.0.009_p3.ebuild, egroupware-1.2.104.ebuild,
  egroupware-1.2.105.ebuild:
  dev-db/mysql => virtual/mysql

*egroupware-1.2.105 (04 Oct 2006)

  04 Oct 2006; Stuart Herbert <stuart@gentoo.org>
  +egroupware-1.2.105.ebuild:
  Version bump; includes security fixes for anyone using register_globals.

  12 Sep 2006; Renat Lumpau <rl03@gentoo.org> egroupware-1.2.104.ebuild:
  Remove .svn dirs per bug #146818.

*egroupware-1.2.104 (01 Aug 2006)

  01 Aug 2006; Renat Lumpau <rl03@gentoo.org> -egroupware-1.2.ebuild,
  +egroupware-1.2.104.ebuild:
  Version bump

  09 Jul 2006; Renat Lumpau <rl03@gentoo.org>
  egroupware-1.0.0.009_p3.ebuild, egroupware-1.2.ebuild:
  einfo->elog
