@@ -1,48 +1,30 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX postinstall-en-1.2.txt 402 RMD160 aefff6af227f9d007afd1b753d97786d66fa7a80 SHA1 72ebcf1a6af140c5b47a9b567f791224d3fbdab8 SHA256 6063f422525dcb597b07a29a54f354452b8962f5487a222c82c75301697a42ba
 MD5 275cc4548dd7c3d730b3aa6227fd19c4 files/postinstall-en-1.2.txt 402
 RMD160 aefff6af227f9d007afd1b753d97786d66fa7a80 files/postinstall-en-1.2.txt 402
 SHA256 6063f422525dcb597b07a29a54f354452b8962f5487a222c82c75301697a42ba files/postinstall-en-1.2.txt 402
-AUX postinstall-en.txt 393 RMD160 613ee1b4e6feb2694f322e6de5443075c3865992 SHA1 3c79e7e5ab7b7623f4da7e2c689a605670864a52 SHA256 95fd15e3282cb20fd575243d0fb93013d1814b72384bdbe756662c20ab0c10df
-MD5 e76f8e156f0ad2ebdbdb725b9954d33f files/postinstall-en.txt 393
-RMD160 613ee1b4e6feb2694f322e6de5443075c3865992 files/postinstall-en.txt 393
-SHA256 95fd15e3282cb20fd575243d0fb93013d1814b72384bdbe756662c20ab0c10df files/postinstall-en.txt 393
-DIST eGroupWare-1.0.0.009-3.tar.bz2 11088636 RMD160 40d2fbf2eef281c70077f02deead16e327c8faa6 SHA1 0d0e77fb439c8a94b2751dff312ff761d40cfd43 SHA256 52b98baf03d088d9eddddad79cafb93230582265fb6fe7af7ce3614efa5b94de
-DIST eGroupWare-1.2-104.tar.bz2 16110429 RMD160 24f58cb9669da860ee340eb360d659f1c041778e SHA1 2e0877f7b7d96a105e2c314606c0ee6b8621ed89 SHA256 f00571ea49bef789758f44e538daf429eda0ae240ebce7658e5ff39769441c90
-DIST eGroupWare-1.2-105.tar.bz2 16118340 RMD160 90e15a5749d50588631fb01c0b673571fb92c161 SHA1 bf51a5749dd2a985b465cbe9c7db7cbb5a7d70a3 SHA256 9ae66d74fa8c3824d03ed3ed891db6bee68eb2723532946c18e8d235a72e64fe
 DIST eGroupWare-1.2-106.tar.bz2 17126634 RMD160 91dcf497c6253c8cab89b6530f48d16023074a0e SHA1 943f2ce1aa0993b03d9b2218350c901f8f027520 SHA256 d7ca673551d4ea676a18bfe93a0b3d11fb9afb334447efecee4611dfff07584c
-EBUILD egroupware-1.0.0.009_p3.ebuild 1362 RMD160 d6b3ff0cd01d660f8f7b3cee3d5c82110dbacbac SHA1 e31a6f8b122427709448eede494583214019d0b7 SHA256 f561837ff93e3284b8e60061f2d46c0602ef574e49cebda0b9d5ddf41bbfc526
-MD5 067c9a60b353784f73c456332d919f89 egroupware-1.0.0.009_p3.ebuild 1362
-RMD160 d6b3ff0cd01d660f8f7b3cee3d5c82110dbacbac egroupware-1.0.0.009_p3.ebuild 1362
-SHA256 f561837ff93e3284b8e60061f2d46c0602ef574e49cebda0b9d5ddf41bbfc526 egroupware-1.0.0.009_p3.ebuild 1362
-EBUILD egroupware-1.2.104.ebuild 1771 RMD160 679b2af8755d26b213884c79f7e19bee7d6dc3a7 SHA1 57f720f0f9a99489b41485f732d9ab21ee225a8d SHA256 4adbeb7748ed272ad5635b22e7742cd2ebe1b3e86c7305c08c10aa9ce1d40238
-MD5 d193f0e12b711e8634d1f1a4d219d46d egroupware-1.2.104.ebuild 1771
-RMD160 679b2af8755d26b213884c79f7e19bee7d6dc3a7 egroupware-1.2.104.ebuild 1771
-SHA256 4adbeb7748ed272ad5635b22e7742cd2ebe1b3e86c7305c08c10aa9ce1d40238 egroupware-1.2.104.ebuild 1771
-EBUILD egroupware-1.2.105.ebuild 1771 RMD160 74fb4d53b9171c8c2fcebfaf7ef564a6e50a0375 SHA1 c9e2cca2694ae11733d0db12949bfd6cf34ed291 SHA256 d525b697b9a11281e5bdb76780815389f0faec9c62ef552b202b53c59f42ec87
-MD5 ba3401c534d84f213afc54dcb98aba68 egroupware-1.2.105.ebuild 1771
-RMD160 74fb4d53b9171c8c2fcebfaf7ef564a6e50a0375 egroupware-1.2.105.ebuild 1771
-SHA256 d525b697b9a11281e5bdb76780815389f0faec9c62ef552b202b53c59f42ec87 egroupware-1.2.105.ebuild 1771
 EBUILD egroupware-1.2.106.ebuild 1689 RMD160 46d249b08b1d52b8e2a573d3dd5cc0b8e49b0f56 SHA1 55e029620e285cf4650ece6eec5f5b203c1821f1 SHA256 a74ec06c8ee662b071dbc895c53da1d43d7b5644078cbd5c4d1792912bdcd2c4
 MD5 f68f44ec2771d9cf8ab882b23d4e43d0 egroupware-1.2.106.ebuild 1689
 RMD160 46d249b08b1d52b8e2a573d3dd5cc0b8e49b0f56 egroupware-1.2.106.ebuild 1689
 SHA256 a74ec06c8ee662b071dbc895c53da1d43d7b5644078cbd5c4d1792912bdcd2c4 egroupware-1.2.106.ebuild 1689
-MISC ChangeLog 10316 RMD160 661bfce05e2e98381587d049c191a3697dd4c5f5 SHA1 9b15d4e4829458a320019e5a385b2bedd6e2978e SHA256 da855e9d0f220378621f2a49c279536503cd9cc5017317e41bfb5de587ca2b3c
-MD5 dbfa21e1432a31664b4fa15f0973db09 ChangeLog 10316
-RMD160 661bfce05e2e98381587d049c191a3697dd4c5f5 ChangeLog 10316
-SHA256 da855e9d0f220378621f2a49c279536503cd9cc5017317e41bfb5de587ca2b3c ChangeLog 10316
+MISC ChangeLog 10502 RMD160 69a2f8b75952c5cfd2d648f218989498532d06b2 SHA1 e4cfd6dd5c23268f9238dd956f3dd99bdf2c6b32 SHA256 0dbcd24c60336a987fe18c5daf87bf213b8fb58b0c27f055090c3762a45a6128
+MD5 8de77881852d54d6cc36831b80db66dd ChangeLog 10502
+RMD160 69a2f8b75952c5cfd2d648f218989498532d06b2 ChangeLog 10502
+SHA256 0dbcd24c60336a987fe18c5daf87bf213b8fb58b0c27f055090c3762a45a6128 ChangeLog 10502
 MISC metadata.xml 161 RMD160 d47e924599b33a35a50f4c9f5564d325c271f83b SHA1 5b91a6d8d06d3dca2d774425befba30caca51507 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4
 MD5 f61bfa064e3acdfcd826e4a38b121196 metadata.xml 161
 RMD160 d47e924599b33a35a50f4c9f5564d325c271f83b metadata.xml 161
 SHA256 9cd891fcf0af580e98b62d2f4ded9e53671599f5a7aafd5dce692b996d2a83f4 metadata.xml 161
-MD5 28debcc4cd0f93017d184c3e3582223c files/digest-egroupware-1.0.0.009_p3 277
-RMD160 138f0cbcbe815be82295610e4b1addce37186791 files/digest-egroupware-1.0.0.009_p3 277
-SHA256 d71601a709ef3fda7509b521fd25e088e40e05f6616d5fbe5ef05a7fa256ccad files/digest-egroupware-1.0.0.009_p3 277
-MD5 b981880021eccbf6e94ce151cc2365bc files/digest-egroupware-1.2.104 265
-RMD160 991134740e72808732670cbe696b0e2ad36ce704 files/digest-egroupware-1.2.104 265
-SHA256 bca685e0731cec9e296340d791f29b2935dbfe786a44f36e4f1d3ae434d6c999 files/digest-egroupware-1.2.104 265
-MD5 45fa6872f4ae8cc157fb52eeb3d4fe24 files/digest-egroupware-1.2.105 265
-RMD160 ffeb351d28b3d178ffb7e0667dacfd7d3c8c3c93 files/digest-egroupware-1.2.105 265
-SHA256 787d66f5099f361e0b80dba84c1ea8806c89fe2f69ea66953313f2a8f1afb0ed files/digest-egroupware-1.2.105 265
 MD5 0087c24ba07d5de38d2f8a4eba1298f9 files/digest-egroupware-1.2.106 265
 RMD160 7dc642239bc9e07212bf5d7e03186a0aa888e319 files/digest-egroupware-1.2.106 265
 SHA256 ee4a958930c4e8817ffe25f075d410434da38b0ff5caab9994a2fd5bbebc83b3 files/digest-egroupware-1.2.106 265
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFF7ZurEzitwsaoONoRArmRAJ4uhhuwBC9tFYz1eHGIBYXtnTeFbACghaoQ
+u0ql+c1uXALLnT8W0JqYbOc=
+=THye
+-----END PGP SIGNATURE-----
