@@ -1,3 +1,0 @@
-MD5 fe43532afd7fe7324a859a8de905cc30 eGroupWare-1.0.0.009-3.tar.bz2 11088636
-RMD160 40d2fbf2eef281c70077f02deead16e327c8faa6 eGroupWare-1.0.0.009-3.tar.bz2 11088636
-SHA256 52b98baf03d088d9eddddad79cafb93230582265fb6fe7af7ce3614efa5b94de eGroupWare-1.0.0.009-3.tar.bz2 11088636
