@@ -1,3 +1,0 @@
-MD5 0f0e84d7f570a653743d2055d593b7bf eGroupWare-1.2-104.tar.bz2 16110429
-RMD160 24f58cb9669da860ee340eb360d659f1c041778e eGroupWare-1.2-104.tar.bz2 16110429
-SHA256 f00571ea49bef789758f44e538daf429eda0ae240ebce7658e5ff39769441c90 eGroupWare-1.2-104.tar.bz2 16110429
