@@ -1,3 +1,0 @@
-MD5 4cc27fc7caca5947ed01e5685fe3c4e2 eGroupWare-1.2-105.tar.bz2 16118340
-RMD160 90e15a5749d50588631fb01c0b673571fb92c161 eGroupWare-1.2-105.tar.bz2 16118340
-SHA256 9ae66d74fa8c3824d03ed3ed891db6bee68eb2723532946c18e8d235a72e64fe eGroupWare-1.2-105.tar.bz2 16118340
