@@ -1,13 +1,0 @@
-
-You are almost done! 
-
-1. Restart your webserver and your database daemon.
-
-2. Point your browser to the URL http://${VHOST_HOSTNAME}/egroupware/setup
-and follow the install script.
-
-Don't forget to read the installation manual, available from 
-http://sourceforge.net/project/showfiles.php?group_id=78745&package_id=94720
-It describes the rest of the installation process.
-
-Enjoy eGroupWare!
